[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/MainMenu/bg.png" type="Texture" id=1]
[ext_resource path="res://Sprites/MainMenu/button_pvp.png" type="Texture" id=2]
[ext_resource path="res://Sprites/MainMenu/button_newgame.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Master.gd" type="Script" id=4]
[ext_resource path="res://Sprites/MainMenu/button_quit.png" type="Texture" id=5]
[ext_resource path="res://Sprites/MainMenu/button_settingshover.png" type="Texture" id=6]
[ext_resource path="res://Sprites/MainMenu/button_pvphover.png" type="Texture" id=7]
[ext_resource path="res://Sprites/MainMenu/button_quithover.png" type="Texture" id=8]
[ext_resource path="res://Sprites/MainMenu/button_newgamehover.png" type="Texture" id=9]
[ext_resource path="res://Sprites/MainMenu/button_settings.png" type="Texture" id=10]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="bg" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="button_newgame" type="TextureButton" parent="."]
margin_top = 452.0
margin_right = 1280.0
margin_bottom = 516.0
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 9 )
texture_focused = ExtResource( 9 )

[node name="button_pvp" type="TextureButton" parent="."]
margin_top = 520.0
margin_right = 1280.0
margin_bottom = 584.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 7 )

[node name="button_settings" type="TextureButton" parent="."]
margin_top = 588.0
margin_right = 1280.0
margin_bottom = 652.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )

[node name="button_quit" type="TextureButton" parent="."]
margin_top = 656.0
margin_right = 1280.0
margin_bottom = 720.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )

[connection signal="pressed" from="button_newgame" to="." method="_on_button_newgame_pressed"]
[connection signal="pressed" from="button_pvp" to="." method="_on_button_pvp_pressed"]
[connection signal="pressed" from="button_settings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="button_quit" to="." method="_on_button_quit_pressed"]
